codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__command_approval_surface_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: buffer_text(&buffer)
---
 ⎇ main  /workspace
 ❯ inspect this repo

 I’m tracing the relevant data flow.



 ◇ Action required
   $ cargo test --workspace
   needs network access
   [y] allow · [a] allow session · [n] deny · [esc] cancel
 Shift+Tab:mode
