codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__edit_block_viewer_filter_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: buffer_text(&buffer)
---

  ┌─ lib.rs ─────────────────────────────────────────────────────────────[×]─┐
  │                                                                          │
  │    │ -    draw_old();                                                    │
  │    │ +    draw_header();                                                 │
  │    │ +    draw_body();                                                   │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                              [filter: draw · 3 matches]  │
  │                                                                          │
  │    Esc close · / search · f filter · v select · w wrap · Y copy path     │
  └──────────────────────────────────────────────────────────────────────────┘
