codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__edit_block_viewer_search_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: buffer_text(&buffer)
---

  ┌─ lib.rs ─────────────────────────────────────────────────────────────[×]─┐
  │                                                                          │
  │  ◆ Edit lib.rs                                                           │
  │                                                                          │
  │    1  pub fn render() {                                                  │
  │    2      draw_old();                                                    │
  │    2      draw_header();                                                 │
  │    3      draw_body();                                                   │
  │    4  }                                                                  │
  │    5                                                                     │
  │    6  pub fn close() {}                                                  │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  search: draw                                                            │
  │                                                                          │
  │    Esc close · / search · f filter · v select · w wrap · Y copy path     │
  └──────────────────────────────────────────────────────────────────────────┘
