codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__edit_block_viewer_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: "format!(\"{}\\n\\nvisual selection mask:\\n{}\", buffer_text(&buffer),\nselection_mask(&buffer, state.theme().panel_selected))"
---

  ┌─ lib.rs ─────────────────────────────────────────────────────────────[×]─┐
  │                                                                          │
  │  ◆ Edit lib.rs                                                           │
  │                                                                          │
  │    │ @@ -1,4 +1,6 @@                                                     │
  │    │  pub fn render() {                                                  │
  │    │ -    draw_old();                                                    │
  │    │ +    draw_header();                                                 │
  │    │ +    draw_body();                                                   │
  │    │  }                                                                  │
  │    │ +                                                                   │
  │    │ +pub fn close() {}                                                  │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │    Esc close · / search · f filter · v select · w wrap · Y copy path     │
  └──────────────────────────────────────────────────────────────────────────┘

visual selection mask:



     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
