codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__file_line_viewer_selection.snap
---
source: astral-tui/src/surface_tests.rs
expression: viewer
---

  ┌─ src/lib.rs ─────────────────────────────────────────────────────────[×]─┐
  │                                                                          │
  │  1 fn first() {}                                                         │
  │  2 fn second() {}                                                        │
  │  3 fn third() {}                                                         │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
